manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: double-agent-frontend
spec:
  selector:
    app: double-agent-frontend
  ports:
    - protocol: TCP
      port: 8080 # service port
      targetPort: 8080 # container port from Dockerfile
  type: ClusterIP
