manifests/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: double-agent-frontend-route
  namespace: ohtuprojekti-staging
  labels:
    app: double-agent-frontend
    type: external
spec:
  host: double-agent-ohtuprojekti-staging.ext.ocp-prod-0.k8s.it.helsinki.fi
  port:
    targetPort: 8080
  to:
    kind: Service
    name: double-agent-frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
